--- a/src/components/Nav/NavStyle.css
+++ b/src/components/Nav/NavStyle.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Kaushan Script', cursive;
 }
 .myFlex {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
     display: grid;
     grid-template-columns: 1fr 4fr;
     align-items: center;
