set hero section for about and register

--- a/src/components/Layout/Custom.css
+++ b/src/components/Layout/Custom.css
@@ -136,7 +136,10 @@ h2 {
 .other {
     height: 100%;
     width: 100%;
-    background: green;
+    background: url('../../Images/coco.jpeg') center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 a {
     color: var(--primaryColor);
